WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230535
REGRESSION(
r282129
): Double clicking margin of a block inside a <span> may select a wrong block
https://bugs.webkit.org/show_bug.cgi?id=230535
Summary
REGRESSION(r282129): Double clicking margin of a block inside a <span> may se...
Antti Koivisto
Reported
2021-09-21 01:01:04 PDT
If there are continuations involved.
Attachments
Patch
(6.91 KB, patch)
2021-09-21 01:13 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch
(6.92 KB, patch)
2021-09-21 01:15 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch
(7.65 KB, patch)
2021-09-21 02:49 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-09-21 01:13:09 PDT
Created
attachment 438791
[details]
Patch
Antti Koivisto
Comment 2
2021-09-21 01:15:18 PDT
Created
attachment 438792
[details]
Patch
Antti Koivisto
Comment 3
2021-09-21 02:49:35 PDT
Created
attachment 438798
[details]
Patch
EWS
Comment 4
2021-09-21 08:05:59 PDT
Committed
r282816
(
241947@main
): <
https://commits.webkit.org/241947@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 438798
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-09-21 08:06:20 PDT
<
rdar://problem/83352241
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug