REGRESSION(r282129): Double clicking margin of a block inside a <span> may select a wrong block https://bugs.webkit.org/show_bug.cgi?id=230535

Reviewed by Alan Bujtas.

Source/WebCore:

If the blocks are inside a <span> we fail to search through continuation chain
and end up always selecting the first block inside it.

Test: editing/selection/hit-test-continuation-margin.html

* rendering/RenderInline.cpp:
(WebCore::RenderInline::positionForPoint):

The firstLineBox() test was really an "are inlines culled" test which stopped making sense
after inline culling was removed. Continuations need special handling but we would only
get to that code path if inlines were culled. After r282129 we would never get there.

Fix by removing the hasInlineBox test.

LayoutTests:

* editing/selection/hit-test-continuation-margin-expected.html: Added.
* editing/selection/hit-test-continuation-margin.html: Added.


Canonical link: https://commits.webkit.org/241947@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282816 268f45cc-cd09-0410-ab3c-d52691b4dbfc